--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div class="titolo">Il Rinascimento</div>
 <br>
 <div class="anno">Periodo: 1450-1550</div>
+<div class="coordinate">Coordinate: Europa, prevalentemente Italia
 <br>
 <div class="caratteristiche">Caratteristiche:</div>
 <ul class="caratteristiche lista">
