Sito per generare numeri casuali

--- a/index.html
+++ b/index.html
@@ -2,25 +2,11 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>3AI Random Number Genarator</title>
+    <meta http-equiv="refresh" content="1;url=generate_numbers.php">
+    <title>3AI Random Numbers Generator</title>
     <link rel="shortcut icon" href="photo_2022-02-28_17-58-13.jpg">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="upper_bar">
-    <div class="credits">Dennis Scacciavillani</div>
-    <a href="https://github.com/Desc005/Desc005.github.io" target="_blank"><img src="github-outline-fill-svgrepo-com.svg" class="github"></a><img src="instagram-svgrepo-com.svg"
-                                                                       class="instagram"></div>
-<div class="title">Generatore di numeri casuali</div>
-<br>
-<form method="get" action="generate_numbers.php">
-    <label for="nNum"></label>
-    <div class="text">Numeri da generare: <input id="nNum" type="number" min="1" max="5" class="box"></div>
-    <br>
-    <label for="min"></label>
-    <div class="text">Minimo: <input id="min" type="number" min="0" max="99" class="box"></div>
-    <label for="max"></label>
-    <div class="text">Massimo: <input id="max" type="number" min="0" max="99" class="box"></div>
-</form>
+
 </body>
 </html>
